@startuml

class ArraySortingProgram {
	+ main(String[] args) : void
}

class ArraySorter {
	+ sort(ArrayOfNumbers array) : ArrayOfNumbers
}

class InputReader {
	+ read(String prompt) : integer
	+ read() : ArrayOfNumbers
}

class Console {
	+ getNumber() : int
	+ print(String msg) : void	
}

class ArrayOfNumbers {
	- int[] data
	+ ArrayOfNumbers() 
	+ addNumber(int number) 
	+ removeNumber(int number) 
	+ removeNumber(int index) : int
}

ArraySortingProgram --> InputReader : call
ArraySortingProgram --> ArraySorter : executes
InputReader --> Console : read data from
InputReader --> ArrayOfNumbers : populates
ArraySorter --> ArrayOfNumbers : sorts data of
@enduml